--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="./css/style.css" />
+        <meta name="keywords" content="HTML, CSS">
+        <meta name="description" content="Reservia, une petite entreprise proposant un outil de planification de vacances. 
+        Leur site permet aux usagers de trouver des hébergements et des activités dans la ville de leur choix. 
+        Les hébergements peuvent également être filtrés par thématique, par exemple leur budget ou leur ambiance.">
+        <meta name="author" content="Robin Ory">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <title>Reservia</title>
     </head>
     <body>
         
