--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <title>Reservia</title>
     </head>
     <body>
+        <h1 style="font-style: normal;">normal</h1>
+        <h1 style="font-style: italic;">italic</h1>
         
     </body>
 </html>
