Division du html pour correspondre a la maquette desktop

--- a/index.html
+++ b/index.html
@@ -9,12 +9,41 @@
         Les hébergements peuvent également être filtrés par thématique, par exemple leur budget ou leur ambiance.">
         <meta name="author" content="Robin Ory">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://kit.fontawesome.com/3f886b6a5c.js" crossorigin="anonymous"></script>
         
         <title>Reservia</title>
     </head>
     <body>
-        <h1 style="font-style: normal;">normal</h1>
-        <h1 style="font-style: italic;">italic</h1>
-        
+        <!--page header-->
+        <header>
+            <!--nav-->
+            <nav>
+
+            </nav>
+        </header>
+
+        <!--page body-->
+        <div>
+            <!--hebergement - populaire-->
+            <section>
+                 <!--hebergement-->
+                <div>
+
+                </div>
+                <!--populaire-->
+                <aside>
+
+                </aside>
+            </section>
+            <!--activités-->
+            <section>
+
+            </section>
+        </div>
+
+        <!--page footer-->
+        <footer>
+
+        </footer>        
     </body>
 </html>
