--- a/index.html
+++ b/index.html
@@ -14,36 +14,235 @@
         <title>Reservia</title>
     </head>
     <body>
-        <!--page header-->
-        <header>
-            <!--nav-->
-            <nav>
+        <div id="bloc_page">
 
-            </nav>
-        </header>
+            <!--page header-->
+            <header>
+                <img src="res/images/logo/Reservia.svg"/>
+                <!--nav-->
+                <nav>
+                    <a href="#bloc_hebergements">Hébergements</a>
+                    <a href="#bloc_activite">Activités</a>
+                    <a>S'inscrire</a>
+                </nav>
+            </header>
 
-        <!--page body-->
-        <div>
-            <!--hebergement - populaire-->
-            <section>
-                 <!--hebergement-->
+            <!--page body-->
+            <div id="bloc_body">
+                <!--recherche-->
+                <section id="bloc_recherche">
+                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <h2>En plein centre ou en plaine nature</h2>
+                    <form>
+                        <input type="search" name="Location" id="location">
+                        <div>
+                            <label>Filtres</label>
+
+                        </div>
+                    </form>
+                    <h2><i class="fas fa-info-circle"></i>Plus de 500 logements sont disponibles dans cette ville</h2>
+
+                </section>
+
+                <!--hebergement - populaire-->
+                <section id="bloc_hergements_populaire">
+                    <!--hebergement-->
+                    <section id="bloc_hebergements">
+                        <h1>Hébergements à Marseille</h1>
+                        <div id="list_hebergement">
+
+                            <div class="bloc hebergement">
+                                <img class="img_hebergement" src="res/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"/>
+                                <h3>Auberge la Cannebière</h3>
+                                <h4>Nuit à partir de 25€</h4>
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+
+                            <div class="bloc hebergement">
+                                <img class="img_hebergement" src="res/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"/>
+                                <h3>Hôtel du port</h3>
+                                <h4>Nuit à partir de 52€</h4>
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+
+                            <div class="bloc hebergement">
+                                <img class="img_hebergement" src="res/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"/>
+                                <h3>Hôtel Les mouettes</h3>
+                                <h4>Nuit à partir de 76€</h4>
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+
+                            <div class="bloc hebergement">
+                                <img class="img_hebergement" src="res/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"/>
+                                <h3>Hôtel de la mer</h3>
+                                <h4>Nuit à partir de 46€</h4>
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+
+                            <div class="bloc hebergement">
+                                <img class="img_hebergement" src="res/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"/>
+                                <h3>Auberge Le Panier</h3>
+                                <h4>Nuit à partir de 23€</h4>
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+
+                            <div class="bloc hebergement">
+                                <img class="img_hebergement" src="res/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"/>
+                                <h3>Hôtel chez Amina</h3>
+                                <h4>Nuit à partir de 96€</h4>
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div>Afficher plus</div>
+                    </section>
+                    <!--populaire-->
+                    <aside id="bloc_populaire">
+                        <h1>Les plus populaire</h1>
+                        <i class="fas fa-chart-line"></i>
+                        <div class="list_populaire">
+
+                            <div class="bloc populaire">
+                                <img class="img_populaire" src="res/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"/>
+                                <h3>Hôtel Le soleil du matin</h3>
+                                <h4>Nuit à partir de 128€</h4>
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+
+                            <div class="bloc populaire">
+                                <img class="img_populaire" src="res/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"/>
+                                <h3>Au c&#339;ur de l'eau Chambres d'hôtes</h3>
+                                <h4>Nuit à partir de 71€</h4>
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+
+                            <div class="bloc populaire">
+                                <img class="img_populaire" src="res/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"/>
+                                <h3>Hôtel Tout bleu et Blanc</h3>
+                                <h4>Nuit à partir de 68€</h4>
+                                <div>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+
+                        </div>
+                    </aside>
+                </section>
+
+                <!--activités-->
+                <section id="bloc_activite">
+                    <h1>Activités à Marseille</h1>
+                    <diV id="list_activite">
+
+                        <div class="bloc grand">
+                            <img class="img_activite" src="res/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"/>
+                            <h3>Vieux Port</h3>
+                        </div>
+
+                        <div class="bloc semi_grand">
+                            <img class="img_activite" src="res/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"/>
+                            <h3>Fort de Pomègues</h3>
+                        </div>
+
+                        <div class="bloc petit">
+                            <img class="img_activite" src="res/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"/>
+                            <h3>Îles du Frioul</h3>
+                        </div>
+
+                        <div class="bloc grand">
+                            <img class="img_activite" src="res/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"/>
+                            <h3>Parc National des Calanques</h3>
+                        </div>
+
+                        <div class="bloc moyen">
+                            <img class="img_activite" src="res/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"/>
+                            <h3>Notre-Dame-de-la-Garde</h3>
+                        </div>
+
+                        <div class="bloc moyen">
+                            <img class="img_activite" src="res/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"/>
+                            <h3>Parc Longchamp</h3>
+                        </div>
+
+                    </diV>
+                </section>
+            </div>
+
+            <!--page footer-->
+            <footer>
+
                 <div>
-
+                    <h1>A propos</h1>
+                    <a>Fonctionnement du site</a>
+                    <a>Conditions générales de vente</a>
+                    <a>Données et confidentialité</a>
                 </div>
-                <!--populaire-->
-                <aside>
 
-                </aside>
-            </section>
-            <!--activités-->
-            <section>
+                <div>
+                    <h1>Nos hébergements</h1>
+                    <a>Charte qualité</a>
+                    <a>Soumettre hôtel</a>
+                </div>
 
-            </section>
-        </div>
+                <div>
+                    <h1>Assistance</h1>
+                    <a>Centre d'aide</a>
+                    <a>Nous contacter</a>
+                </div>
 
-        <!--page footer-->
-        <footer>
-
-        </footer>        
+            </footer>  
+        </div>      
     </body>
 </html>
