prépositionnement du header en css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img  src="res/images/logo/Reservia.svg" />
       </div>
       <!--nav-->
-      <nav class="primary_nav">
+      <nav id="primary_nav">
         <ul>
           <li>
             <a class="selected" href="#bloc_accommodations">Hébergements</a>
@@ -34,7 +34,7 @@
           <li><a href="#bloc_activite">Activités</a></li>
         </ul>
       </nav>
-      <nav class="signin_nav">
+      <nav id="signin_nav">
         <ul>
           <li><a id="signin">S'inscrire</a></li>
         </ul>
