travail sur le bouton de recherche et raz de tout les margin eet width de la page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--page header-->
     <header>
       <div id="logo">
-        <img  src="res/images/logo/Reservia.svg" />
+        <img src="res/images/logo/Reservia.svg" />
       </div>
       <!--nav-->
       <nav id="primary_nav">
@@ -56,7 +56,12 @@
               id="location"
               placeholder="Marseille, France"
             />
-            <p>Rechercher</p>
+            <button id="desktop_button">
+              <div>Rechercher</div>
+            </button>
+            <button id="mobile_button">              
+              <i class="fas fa-search"></i>
+            </button>
           </div>
           <div id="bloc_filters">
             <label>Filtres</label>
